grass (7.0.0~rc2-1~exp1) UNRELEASED; urgency=medium

  * New upstream release candidate.
  * Remove additional Doxygen files on clean.
  * Drop upstream tarball repacking, fixed upstream.
  * Drop patches applied upstream, refresh remaining patches.

 -- Bas Couwenberg <sebastic@debian.org>  Sun, 08 Feb 2015 20:13:24 +0100

grass (7.0.0~rc1+ds1-1~exp2) experimental; urgency=medium

  * Add patch to treat GNU/{Hurd,kFreeBSD} like Linux in SC_CONFIG_CFLAGS.
  * Add patch to fix Python ctypes conversion for stat64 struct on Hurd.
  * Add patch to prevent build failures by ignoring HTML description
    errors.

 -- Bas Couwenberg <sebastic@debian.org>  Sun, 08 Feb 2015 18:23:42 +0100

grass (7.0.0~rc1+ds1-1~exp1) experimental; urgency=medium

  * New upstream release candidate.
  * Repack upstream tarball, remove precompiled Python objects.
  * Add upstream metadata.
  * Update gbp.conf and Vcs-Git URL to use the experimental branch.
  * Update watch file for GRASS 7.0.
  * Drop build dependencies for Tcl/Tk, add build dependencies:
    python-numpy, libnetcdf-dev, netcdf-bin, libblas-dev, liblapack-dev
  * Update Vcs-Browser URL to use cgit instead of gitweb.
  * Update paths to use grass70.
  * Add configure options: --with-netcdf, --with-blas, --with-lapack,
    remove --with-tcltk-includes.
  * Update patches for GRASS 7.
  * Update copyright file, changes:
    - Update copyright years
    - Group files by license
    - Remove unused license sections
  * Add patches for various typos.
  * Fix desktop file with patch instead of d/rules.
  * Use minimal dh rules.
  * Bump Standards-Version to 3.9.6, no changes.
  * Use dpkg-maintscript-helper to replace directories with symlinks.
    (closes: #776349)
  * Update my email to use @debian.org address.

 -- Bas Couwenberg <sebastic@debian.org>  Fri, 06 Feb 2015 18:51:17 +0100

grass (6.4.4-1) unstable; urgency=medium

  [ M. Hamish Bowman ]
  * Packaged new upstream version, drop redundant patches.